k8s/app-seeder-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seeder-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seeder-service
  template:
    metadata:
      labels:
        app: seeder-service
    spec:
      containers:
        - name: seeder-service
          image: sehatin/seeder-service
          ports:
            - containerPort: 8000
          command: [ "php",  "artisan", db:seed" ]
---
apiVersion: v1
kind: Service
metadata:
  name: seeder-service
spec:
  selector:
    app: seeder-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
