k8s/app-user-detail-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-detail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-detail-service
  template:
    metadata:
      labels:
        app: user-detail-service
    spec:
      containers:
        - name: octane-server
          image: sehatin/user-detail-service
          ports:
            - containerPort: 8000
          command: ["php", "artisan", "octane:start", "--server=swoole", "--host=0.0.0.0", "--port=8000"]
        - name: queue-worker
          image: sehatin/user-detail-service
          command: ["php", "artisan", "queue:work"]
---
apiVersion: v1
kind: Service
metadata:
  name: user-detail-service
spec:
  selector:
    app: user-detail-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
