k8s/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: "amqp-port"  # Name for the AMQP port
      port: 5672
      targetPort: 5672
    - name: "http-port"  # Name for the HTTP management port
      port: 15672
